now the player changes colour when on water and the terrain actually changes by taking a random slice in the Z axis in the perlin noise...and the game is not mobile friendly as i added buttons to control the player...its janky...but it works...the WASD is still there!!...lol

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
     <title>Top down RPG Game</title>
 </head>
 <body>
-    <canvas id = 'canvas' width="600px" height="400px"></canvas>
+    <canvas id = 'canvas' width="600px" height="400px"></canvas><br>
+
+    <button id = 'left' style="width:100px;height:100px"> < </button>
+    <button id = 'up' style="width:100px;height:100px"> ^ </button>
+    <button id = 'right' style="width:100px;height:100px"> > </button>
+    <button id ='down' style="width:100px;height:100px"> v </button>
+    
 
     <script src = 'sketch.js'></script>
 </body>
