--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top down RPG Game</title>
 </head>
-<body>
+<body bgcolor= 'black'>
     <canvas id = 'canvas' width="600px" height="400px"></canvas><br>
+
+    
+    <image src = './tileset.png' id = 'tileset' style = 'display:none;'class = 'tileset'>
 
     <button id = 'left' style="width:100px;height:100px"> < </button>
     <button id = 'up' style="width:100px;height:100px"> ^ </button>
@@ -15,6 +18,6 @@
     <button id ='down' style="width:100px;height:100px"> v </button>
     
 
-    <script src = 'sketch.js'></script>
+    <script src = 'sketch.js' defer></script>
 </body>
 </html>
