--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name = "description" content="Author: K. Akshay .V. ; A top down, infinite, single player, tile game with crafting adventure and much more!">
     <title>Top down RPG Game</title>
 </head>
 <body bgcolor= 'black'>
