--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <canvas id = 'canvas' width="600px" height="400px"></canvas><br>
 
     
-    <image src = './tileset.png' id = 'tileset' style = 'display:none;'class = 'tileset'>
+    <image src = './tileset.png' id = 'tileset' style = 'display:none;'class = 'tileset' width="256px" height="256px">
 
     <button id = 'left' style="width:100px;height:100px"> < </button>
     <button id = 'up' style="width:100px;height:100px"> ^ </button>
